# cmake-cuda-CI-github-actions

./: .gitmodules  CMakeLists.txt  README.md  executor.cu  executor.h  executor2.cu  executor2.h  functions.cu  functions.h  main.cc  transform_reduce.h
.github/workflows/: autoTest.yml
tests/: CMakeLists.txt  test.cc
